<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:orientation="vertical"
        android:padding="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="14dp"
                android:text="@string/limited_outcome_per_week"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size" />

            <Switch
                android:id="@+id/switchLimitedOutcomePerWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <com.minhhung.life_app.widgets.HasTextChangedActionEditText
            android:id="@+id/edtLimitedOutcomePerWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:gravity="end"
            android:inputType="numberDecimal"
            android:padding="14dp"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="14dp"
                android:text="@string/limited_outcome_per_month"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size" />

            <Switch
                android:id="@+id/switchLimitedOutcomePerMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <com.minhhung.life_app.widgets.HasTextChangedActionEditText
            android:id="@+id/edtLimitedOutcomePerMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:gravity="end"
            android:inputType="numberDecimal"
            android:padding="14dp"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="14dp"
            android:id="@+id/btnSaveConfig"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save_config" />

    </LinearLayout>

    <com.minhhung.life_app.widgets.LoadingWidget
        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</FrameLayout>