<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SmallSp">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F5F5F5"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_cost"
                            android:drawablePadding="5dp"
                            android:text="@string/label_total"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tvTotal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/dark_gray" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:drawableStart="@drawable/ic_credit_card"
                                android:drawablePadding="5dp"
                                android:text="@string/label_atm"
                                android:textSize="12sp" />

                            <Button
                                android:id="@+id/btnAddAtm"
                                style="@style/Button.SmallPadding"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/button_add"
                                android:textAllCaps="false"
                                android:textSize="10sp" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvAtm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:drawableStart="@drawable/ic_money"
                                android:drawablePadding="5dp"
                                android:text="@string/label_cash"
                                android:textSize="12sp" />

                            <Button
                                android:id="@+id/btnAddCash"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/Button.SmallPadding"
                                android:text="@string/button_add"
                                android:textAllCaps="false"
                                android:textSize="10sp" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvCash"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:background="#A3A3A3" />

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.minhhung.life_app.widgets.CircularChart
                            android:id="@+id/moneyChart"
                            android:layout_width="100dp"
                            android:layout_height="100dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal">

                            <View
                                android:layout_width="20dp"
                                android:layout_height="match_parent"
                                android:background="@color/colorPrimaryDark" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/label_atm"
                                android:textAllCaps="false"
                                android:textColor="#000000"
                                android:textSize="10sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:orientation="horizontal">

                            <View
                                android:layout_width="20dp"
                                android:layout_height="match_parent"
                                android:background="@color/green" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/label_cash"
                                android:textAllCaps="false"
                                android:textColor="#000000"
                                android:textSize="10sp" />

                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:text="@string/label_income_in_week"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/gray" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvTransactions"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnAddOutcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="12dp"
                    android:src="@drawable/ic_add"
                    app:fabSize="normal" />

            </FrameLayout>
        </LinearLayout>

        <com.minhhung.life_app.widgets.LoadingWidget
            android:id="@+id/loadingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </FrameLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>